add search mechanism and fetch gps

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     </head>
     <body>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <p>Select an Employee:</p>
+    <select id="employee-dropdown" name = "employees"></select>
     <div id="map-container"></div>
     <script type="text/javascript" src="project.js" defer></script>
+    <script type="text/javascript" src="carVis.js" defer></script>
+    <script type="text/javascript" src="gpsVis.js" defer></script>
+
     <button type="button" class="btn btn-primary">Primary</button>
     </body>
 </html>
