dynamically added names

--- a/index.html
+++ b/index.html
@@ -17,29 +17,10 @@
     <div class="container mt-2 pt-4">
         <div class="row justify-content-md-center">
           <div class="col col-lg-2">
-            <p>Select an Employee:</p>
+            <p class="mb-2">Select an Employee:</p>
             <select class="form-select" id="employee-dropdown" name="employees"></select>
-            <div class="list-group mt-4">
-                <label class="list-group-item">
-                  <input class="form-check-input me-1" type="checkbox" value="">
-                  First checkbox
-                </label>
-                <label class="list-group-item">
-                  <input class="form-check-input me-1" type="checkbox" value="">
-                  Second checkbox
-                </label>
-                <label class="list-group-item">
-                  <input class="form-check-input me-1" type="checkbox" value="">
-                  Third checkbox
-                </label>
-                <label class="list-group-item">
-                  <input class="form-check-input me-1" type="checkbox" value="">
-                  Fourth checkbox
-                </label>
-                <label class="list-group-item">
-                  <input class="form-check-input me-1" type="checkbox" value="">
-                  Fifth checkbox
-                </label>
+            <p class="mt-4 mb-2">Add employees:</p>
+            <div id="employee-list" class="list-group">
               </div>
           </div>
           <div class="col-md-auto">
