Make employee checkbox panel scroll
Also added a run script to save the server start command.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <script type="text/javascript" src="gpsVis.js" defer></script>
     <div class="container mt-2 pt-4">
         <div class="row justify-content-md-center">
-          <div class="col col-lg-2">
+          <div id="employee-col" class="col col-lg-2">
             <p class="mb-2">Select an Employee:</p>
             <select class="form-select" id="employee-dropdown" name="employees"></select>
             <p class="mt-4 mb-2">Add employees:</p>
             <div id="employee-list" class="list-group">
-              </div>
+            </div>
           </div>
           <div class="col-md-auto">
             <div class="alert alert-primary" role="alert">
