Re-organize page logic to load all data first and cache it to window scope

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             </div>
           </div>
           <div class="col-md-auto">
-            <div class="alert alert-primary" role="alert">
-                Refresh page to show random data. Hover over each point to show GPS data.
+            <div id="page-alert" class="alert alert-primary" role="alert">
             </div>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
