--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <title>CSE557: Assignment 2</title>
         <link rel="stylesheet" type="text/css" href="main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css" crossorigin="anonymous">
     </head>
     <body>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script type="text/javascript" src="project.js" defer></script>
     <script type="text/javascript" src="carVis.js" defer></script>
@@ -26,7 +28,11 @@
           <div class="col-md-auto">
             <div id="page-alert" class="alert alert-primary" role="alert">
             </div>
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <span">
+                From:<input type="text" id="datepickerFrom" style="margin-left: 10px;margin-right: 50px">
+                To:<input type="text" id="datepickerTo" style="margin-left: 10px">
+            </span>
+            <ul class="nav nav-tabs" id="myTab" role="tablist" style="padding-top: 20px">
                 <li class="nav-item">
                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#individual" role="tab" aria-controls="home" aria-selected="true">Individual</a>
                 </li>
