--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     </head>
     <body>
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -13,6 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
     <script type="text/javascript" src="project.js" defer></script>
     <script type="text/javascript" src="carVis.js" defer></script>
     <script type="text/javascript" src="gpsVis.js" defer></script>
@@ -28,10 +30,18 @@
           <div class="col-md-auto">
             <div id="page-alert" class="alert alert-primary" role="alert">
             </div>
-            <span">
-                From:<input type="text" id="datepickerFrom" style="margin-left: 10px;margin-right: 50px">
-                To:<input type="text" id="datepickerTo" style="margin-left: 10px">
-            </span>
+            <div>
+                <span>
+                    From:<input type="text" id="datepickerFrom" style="margin-left: 10px;margin-right: 50px">
+                    To:<input type="text" id="datepickerTo" style="margin-left: 10px">
+                </span>
+            </div>
+            <div style="padding-top: 10px">
+                <span>
+                    Start:<input type="text" class="timepicker" id="timepickerStart" style="margin-left: 10px;margin-right:40px;">
+                    End:<input type="text" class="timepicker" id="timepickerEnd" style="margin-left: 10px;">
+                </span>
+            </div>
             <ul class="nav nav-tabs" id="myTab" role="tablist" style="padding-top: 20px">
                 <li class="nav-item">
                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#individual" role="tab" aria-controls="home" aria-selected="true">Individual</a>
@@ -52,6 +62,9 @@
                 </div>
                 <div class="tab-pane fade" id="loyalty" role="tabpanel" aria-labelledby="contact-tab">
                     3
+                </div>
+                <div>
+                    <button type="button" id="btnUpdateMap" class="btn btn-primary">Primary</button>
                 </div>
             </div>
           </div>
