--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
             </div>
           </div>
           <div class="col col-lg-2">
-            <div class="list-group">
-                <a href="#" class="list-group-item">
+              <p class="mb-1">Selected Transactions</p>
+            <div class="list-group" id="employee-info">
+                <!-- <a href="#" class="list-group-item">
                   <p class="mb-1">Person X</p>
                   <small>Info here</small>
                 </a>
@@ -81,7 +82,7 @@
                 <a href="#" class="list-group-item">
                   <p class="mb-1">Person Z</p>
                   <small>Info here</small>
-                </a>
+                </a> -->
               </div>
           </div>
         </div>
