Clean up text and instructions on page for user clarity

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div id="employee-col" class="col col-lg-2">
             <p class="mb-2">Select an Employee:</p>
             <select class="form-select" id="employee-dropdown" name="employees"></select>
-            <p class="mt-4 mb-2">Add employees:</p>
+            <p class="mt-4 mb-2">Additional employees:</p>
             <div id="employee-list" class="list-group">
             </div>
           </div>
@@ -44,13 +44,7 @@
             </div>
             <ul class="nav nav-tabs" id="myTab" role="tablist" style="padding-top: 20px">
                 <li class="nav-item">
-                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#individual" role="tab" aria-controls="home" aria-selected="true">Individual</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#aggregate" role="tab" aria-controls="profile" aria-selected="false">Aggregate</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#loyalty" role="tab" aria-controls="contact" aria-selected="false">Loyalty</a>
+                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#individual" role="tab" aria-controls="home" aria-selected="true">Map</a>
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent">
@@ -69,20 +63,9 @@
             </div>
           </div>
           <div class="col col-lg-2">
-              <p class="mb-1">Selected Transactions</p>
+            <p class="mb-1">Selected Transactions</p>
             <div class="list-group" id="employee-info">
-                <!-- <a href="#" class="list-group-item">
-                  <p class="mb-1">Person X</p>
-                  <small>Info here</small>
-                </a>
-                <a href="#" class="list-group-item">
-                  <p class="mb-1">Person Y</p>
-                  <small>Info here</small>
-                </a>
-                <a href="#" class="list-group-item">
-                  <p class="mb-1">Person Z</p>
-                  <small>Info here</small>
-                </a> -->
+                None
               </div>
           </div>
         </div>
