Fix container styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="project.js" defer></script>
     <script type="text/javascript" src="carVis.js" defer></script>
     <script type="text/javascript" src="gpsVis.js" defer></script>
-    <div class="container mt-2 pt-4">
+    <div class="container mt-2 pt-4 pb-4">
         <div class="row justify-content-md-center">
           <div id="employee-col" class="col col-lg-2">
             <p class="mb-2">Select an Employee:</p>
